# geowars

./: .CMakeLists.txt.swp  CMakeLists.txt  README.txt
.github/workflows/: build_geowars.yml
cmake/: download_cpm.cmake
config/: config.txt
doc/: doc.txt
example/: geowars_example.cpp
include/geowars/: .components.h.swp  .entity.h.swp  .entity_manager.h.swp  components.h  components.hpp  entity.h  entity.hpp  entity_manager.h  entity_manager.hpp  game.h  game.hpp  vec2.h  vec2.hpp
src/: .entity.cpp.swp  entity.cpp  entity_manager.cpp  game.cpp  main.cpp  vec2.cpp
src/entities/: entity.cpp  entity_manager.cpp
src/game/: game.cpp
src/physics/: vec2.cpp
src/run/: CMakeLists.txt  geowars.cpp
src/run_game/: .CMakeLists.txt.swp  CMakeLists.txt  geowars.cpp
